Collect all the output CSV files

--- a/Notebook/Flight_Parameter_Estimator (3).ipynb
+++ b/Notebook/Flight_Parameter_Estimator (3).ipynb
@@ -137,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 80,
       "metadata": {
         "id": "mClcJ64nIfTj"
       },
@@ -146,7 +146,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['strip_E240_1679940139', 'strip_E240_1679940278', 'strip_E240_1679940007', 'strip_E240_1679940412']\n"
+            "['strip_E243_1679940124', 'strip_E246_1679940459', 'strip_E249_1679940782', 'strip_E249_1679940514', 'strip_E243_1679940528', 'strip_E246_1679940242', 'strip_E246_1679940565', 'strip_E249_1679940606', 'strip_E249_1679940429', 'strip_E243_1679940257', 'strip_E249_1679940691', 'strip_E249_1679940867', 'strip_E243_1679940395', 'strip_E246_1679940348', 'strip_E240_1679940412']\n"
           ]
         }
       ],
@@ -159,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 231,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -179,7 +179,7 @@
         }
       ],
       "source": [
-        "choice = 3\n",
+        "choice = 14\n",
         "sample_dataset_path = os.path.join(sample_dataset_dir, sample_parent_dir[choice])\n",
         "mid_dir = sample_parent_dir[choice].split('_')[1]\n",
         "save_parent_dir = f\"/home/datademon/Desktop/flight-Parameter-Estimation/optical-edge-flight-params-main/Ouputs/{mid_dir}\"\n",
@@ -202,7 +202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 232,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -245,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 233,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -261,7 +261,7 @@
               "1679939655.8286555"
             ]
           },
-          "execution_count": 61,
+          "execution_count": 233,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -281,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 234,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -307,7 +307,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 235,
       "metadata": {
         "id": "GjFrAg4xI6xr"
       },
@@ -323,7 +323,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 236,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -349,7 +349,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 237,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -388,7 +388,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 238,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -409,7 +409,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Processing frames: 100%|█████████▉| 365/366 [03:04<00:00,  1.98frame/s]\n"
+            "Processing frames: 100%|█████████▉| 365/366 [03:19<00:00,  1.83frame/s]\n"
           ]
         },
         {
@@ -491,7 +491,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Execution-time (UNIX):  184.28197479248047\n"
+            "Execution-time (UNIX):  199.0137255191803\n"
           ]
         }
       ],
@@ -565,7 +565,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 239,
       "metadata": {
         "id": "4CF1arlfJrSL"
       },
